--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <h1 class="sectionTitle">Tienda</h1>
             <div class="intro">
                 <p class="text-center">Nota al Tutor: Las imágenes de abajo y sus descripciones son placeholders.</p>
+                <p class="text-center">La página es para un emprendimiento real.</p>
             </div>
     
             <div class="container d-flex justify-content-center mt-3">
@@ -71,7 +72,7 @@
                         <img src="images/ch1.jpg" alt="Choco 1" class="shadow p-3 bg-white rounded clase-image">
                         <div class="layer-top">
                             <div class="layer-text">
-                                <p class="clases-text-responsive">Tremendo choco.</P>
+                                <h2>Tremendo Choco</h2>
                                 <p class="clases-text-responsive">Centro de magia y cobertura de locura.</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $500</p> 
                                 <a class="btn infoButton" target="_blank" href="..." role="button">Quiero!</a>
@@ -82,7 +83,7 @@
                         <img src="images/ch2.jpg" alt="Choco 2" class="shadow p-3 bg-white rounded clase-image">
                         <div class="layer-top">
                             <div class="layer-text">
-                                <p class="clases-text-responsive">Una bomba de amor!</P>
+                                <h2>Bomba de Amor</h2>
                                 <p class="clases-text-responsive">Vas a sentir una explosión de sabores, sabelo.</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $500</p> 
                                 <a class="btn infoButton" target="_blank" href="..." role="button">Lo Necesito!</a>
@@ -93,7 +94,7 @@
                         <img src="images/ch3.png" alt="Choco 3" class="shadow p-3 bg-white rounded clase-image">
                         <div class="layer-top">
                             <div class="layer-text">
-                                <p class="clases-text-responsive">Una  F I E S T A.</P>
+                                <h2>Una  Fiesta</h2>
                                 <p class="clases-text-responsive">No podés creer que algo así exista!</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $500</p> 
                                 <a class="btn infoButton" target="_blank" href="..." role="button">Dame esto ya!</a>
@@ -104,10 +105,10 @@
                         <img src="images/ch4.jpg" alt="Choco 4" class="shadow p-3 bg-white rounded clase-image">
                         <div class="layer-top">
                             <div class="layer-text">
-                                <p class="clases-text-responsive">Festival de sabores!</P>
-                                    <p class="clases-text-responsive">Te vas a querer casar con este chocolate.</p>
-                                    <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $500</p> 
-                                    <a class="btn infoButton" target="_blank" href="..." role="button">Ufff... Comprar!</a>
+                                <h2>Festival de Sabores</h2>
+                                <p class="clases-text-responsive">Te vas a querer casar con este chocolate.</p>
+                                <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $500</p> 
+                                <a class="btn infoButton" target="_blank" href="..." role="button">Ufff... Comprar!</a>
                             </div>
                         </div>
                     </div>
@@ -115,7 +116,7 @@
                         <img src="images/ch5.jpg" alt="Choco 5" class="shadow p-3 bg-white rounded clase-image">
                         <div class="layer-top">
                             <div class="layer-text">
-                                <p class="clases-text-responsive">Ah, no! Esto es fatal!</P>
+                                <h2>Esto es Fatal</h2>
                                 <p class="clases-text-responsive">Todo lo que está bien (y mal) en el mundo...</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $500</p> 
                                 <a class="btn infoButton" target="_blank" href="..." role="button">Comprar ya mismo!</a>
@@ -126,7 +127,7 @@
                         <img src="images/ch6.jpg" alt="Choco 6" class="shadow p-3 bg-white rounded clase-image">
                         <div class="layer-top">
                             <div class="layer-text">
-                                <p class="clases-text-responsive">El chocolate de tu vida.</P>
+                                <h2>El Chocolate de tu Vida</h2>
                                 <p class="clases-text-responsive">No va a haber otro como este, he dicho!</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $500</p> 
                                 <a class="btn infoButton" target="_blank" href="..." role="button">Lo Necesito Ya!</a>
