--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             </div>
     
             <div class="container d-flex justify-content-center mt-3">
-                <div class="row mt-5">
-                    <div class="col-lg-4 col-md-6 col-sm-12 clase-image-container">
+                <div id="dynamicTienda" class="row mt-5">
+                    <!-- <div class="col-lg-4 col-md-6 col-sm-12 clase-image-container">
                         <img src="images/ch1.jpg" alt="Choco 1" class="shadow p-3 bg-white rounded clase-image">
                         <div class="layer-top">
                             <div class="layer-text">
@@ -133,7 +133,7 @@
                                 <a class="btn infoButton" target="_blank" href="..." role="button">Lo Necesito Ya!</a>
                             </div>
                         </div>                  
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -152,7 +152,10 @@
         <!-- <img class="logoFooter" src="images/logo-white.png" alt="Logo Footer"> -->
     </footer>
 
-
+    <!-- JS -->
+    <script src="functions.js"></script>
+    <script src="main.js"></script>
+    <!-- END -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script> -->
@@ -161,8 +164,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>  
 
-    <!-- JS -->
-    <script src="main.js"></script>
-    <!-- END -->
 </body>
 </html>
