--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 <body>
 
@@ -75,7 +76,7 @@
                                 <h2>Tremendo Choco</h2>
                                 <p class="clases-text-responsive">Centro de magia y cobertura de locura.</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $500</p> 
-                                <a class="btn infoButton" target="_blank" href="..." role="button">Quiero!</a>
+                                <a class="btn addToCartButton" target="_blank" href="..." role="button">Quiero!</a>
                             </div>
                         </div>
                     </div>
@@ -86,7 +87,7 @@
                                 <h2>Bomba de Amor</h2>
                                 <p class="clases-text-responsive">Vas a sentir una explosión de sabores, sabelo.</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $550</p> 
-                                <a class="btn infoButton" target="_blank" href="..." role="button">Lo Necesito!</a>
+                                <a class="btn addToCartButton" target="_blank" href="..." role="button">Lo Necesito!</a>
                             </div>
                         </div>                  
                     </div>
@@ -97,7 +98,7 @@
                                 <h2>Una  Fiesta</h2>
                                 <p class="clases-text-responsive">No podés creer que algo así exista!</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $525</p> 
-                                <a class="btn infoButton" target="_blank" href="..." role="button">Dame esto ya!</a>
+                                <a class="btn addToCartButton" target="_blank" href="..." role="button">Dame esto ya!</a>
                             </div>
                         </div>                  
                     </div>
@@ -108,7 +109,7 @@
                                 <h2>Festival de Sabores</h2>
                                 <p class="clases-text-responsive">Te vas a querer casar con este chocolate.</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $500</p> 
-                                <a class="btn infoButton" target="_blank" href="..." role="button">Ufff... Comprar!</a>
+                                <a class="btn addToCartButton" target="_blank" href="..." role="button">Ufff... Comprar!</a>
                             </div>
                         </div>
                     </div>
@@ -119,7 +120,7 @@
                                 <h2>Esto es Fatal</h2>
                                 <p class="clases-text-responsive">Todo lo que está bien (y mal) en el mundo...</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $550</p> 
-                                <a class="btn infoButton" target="_blank" href="..." role="button">Comprar ya mismo!</a>
+                                <a class="btn addToCartButton" target="_blank" href="..." role="button">Comprar ya mismo!</a>
                             </div>
                         </div>                  
                     </div>
@@ -130,7 +131,7 @@
                                 <h2>El Chocolate de tu Vida</h2>
                                 <p class="clases-text-responsive">No va a haber otro como este, he dicho!</p>
                                 <p class="clases-text-responsive"><img src="images/precio.png" alt="Precio"> $525</p> 
-                                <a class="btn infoButton" target="_blank" href="..." role="button">Lo Necesito Ya!</a>
+                                <a class="btn addToCartButton" target="_blank" href="..." role="button">Lo Necesito Ya!</a>
                             </div>
                         </div>                  
                     </div> -->
@@ -153,8 +154,9 @@
     </footer>
 
     <!-- JS -->
-    <script src="functions.js"></script>
-    <script src="main.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/cart.js"></script>
     <!-- END -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
