--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
+    <!-- JS -->
+    <script src="js/functions.js" defer></script>
+    <script src="js/index.js" defer></script>
+    <!-- END -->
 </head>
 <body>
 
@@ -33,18 +37,14 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand w-50" href="index.html"><img src="images/logo-long.png" alt="Logo de Dulce Manía" class="logo"></a>
-      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse nav-bar-end" id="navbarNavAltMarkup">
         <div class="navbar-nav nav-bar-items-responsive">
-          <a class="nav-link fw-bold me-3" href="index.html#novias">Novias</a>
-          <a class="nav-link fw-bold me-3" href="index.html#clases">Clases</a>
-          <a class="nav-link fw-bold me-3" href="index.html#sobreMi">Sobre Mi</a>
-          <a class="nav-link fw-bold me-3" href="tienda.html">Tienda</a> 
-          <a class="nav-link fw-bold nav-bar-lastitem-responsive" href="index.html#contacto">Contacto</a>
+          <a class="nav-link fw-bold nav-bar-lastitem-responsive" href="...">Carrito</a>
         </div>
-      </div> -->
+      </div>
     </div>
   </nav>
 </header>
@@ -54,17 +54,17 @@
             <img src="images/banner1.jpg" alt="Banner. Marina está maquillando a una novia." class="w100 margin-mq">               
         </div> -->
 
-        <div>
+        <!-- <div>
             <img src="images/carrito-vacio.png" alt="La bolsa de compras no contiene elementos" class="carrito">
-        </div>
+        </div> -->
 
 <!-- Sección Tienda -->
-        <div class="space-pre-section space-pink"></div>
-        <section class="sectionPink">
+        <div class="space-pre-section"></div>
+        <section class="section">
         <h1 class="sectionTitle">Tienda</h1>
-            <div class="intro">
+            <!-- <div class="intro">
                 <p class="text-center">Nota al Tutor: Las imágenes de abajo y sus descripciones son placeholders.</p>
-                <p class="text-center">La página es para un emprendimiento real.</p>
+                <p class="text-center">La página es para un emprendimiento real.</p> -->
             </div>
     
             <div class="container d-flex justify-content-center mt-3">
@@ -150,14 +150,8 @@
             <li><a target="_blank" href="https://www.instagram.com/dulcemania_choco/"><img src="images/ig-white.svg" alt="Marina MKP Instagram" class="footer-social"></a></li>
             <li><a target="_blank" href="..."><img src="images/wp-white.svg" alt="" class="footer-social"></a></li>
         </ul>
-        <!-- <img class="logoFooter" src="images/logo-white.png" alt="Logo Footer"> -->
+        <img class="logoFooter" src="images/logo-white.png" alt="Logo Footer">
     </footer>
-
-    <!-- JS -->
-    <script src="js/functions.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/cart.js"></script>
-    <!-- END -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script> -->
